--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-schema-utils",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "Extensions for graphql-js to support diffing and merging types and schemas.",
   "main": "index.js",
   "scripts": {
@@ -21,13 +21,14 @@
   },
   "homepage": "https://github.com/jarwol/graphql-schema-utils#readme",
   "dependencies": {
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.clonedeep": "^4.5.0",
+    "npm": "^6.4.1"
   },
   "peerDependencies": {
     "graphql": "^0.8.2"
   },
   "devDependencies": {
     "graphql": "^0.8.2",
-    "mocha": "^3.2.0"
+    "mocha": "^5.2.0"
   }
 }
